// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main elements match recorded snapshots Primary Display displays welcome correctly 1`] = `
<div
  className="mb-11 ml-11 mt-32 basis-7/12 self-center sm:mb-0 sm:mt-64 md:ml-32 xl:mt-0"
>
  <h2
    className="mb-5 text-4xl font-bold sm:text-5xl"
  >
    Kyler Bomhof
  </h2>
  <div
    className="relative ml-5 mr-5 max-w-xl font-medium"
  >
    <p
      className="mb-5 font-medium "
    >
      Hi, I'm a passionate full stack developer with professional experience building web applications.
    </p>
    <p
      className="mb-5 font-medium"
    >
      I'm passionate about software architecture and building applications such that they are testable, and actually tested.
    </p>
    <span
      className="styled-line absolute -left-5 bottom-0 top-0 w-0.5"
    />
  </div>
</div>
`;

exports[`main elements match recorded snapshots StyledLine renders on the bottom 1`] = `
<span
  className="styled-line absolute -left-5 bottom-0 top-0 w-0.5"
/>
`;

exports[`main elements match recorded snapshots StyledLine renders on the left 1`] = `
<span
  className="styled-vertical-line absolute -bottom-1 left-0 h-px px-11"
/>
`;
